WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97416
PutScopedVar should not be marked as clobbering the world
https://bugs.webkit.org/show_bug.cgi?id=97416
Summary
PutScopedVar should not be marked as clobbering the world
Geoffrey Garen
Reported
2012-09-23 17:08:00 PDT
PutScopedVar should not be marked as clobbering the world
Attachments
Patch
(1.38 KB, patch)
2012-09-23 17:08 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-09-23 17:08:36 PDT
Created
attachment 165297
[details]
Patch
Filip Pizlo
Comment 2
2012-09-23 17:14:07 PDT
Comment on
attachment 165297
[details]
Patch I think you've already covered your bases, but before landing I would go through the cases in CSE one more time and make sure that nothing has slipped by. In your case, you're probably fine since we don't inline PutScopedVar, and we never have PutScopedVar on *this frame's* locals, and I don't think we do any CSE on resolve's.
Geoffrey Garen
Comment 3
2012-09-23 20:45:54 PDT
> we don't inline PutScopedVar
Yeah.
> and we never have PutScopedVar on *this frame's* locals
Yup. (Or, when we do, we use get/put_scoped_var exclusively, and not local variable references.)
> and I don't think we do any CSE on resolve's.
Also true.
Geoffrey Garen
Comment 4
2012-09-23 20:47:20 PDT
Comment on
attachment 165297
[details]
Patch Clearing flags on attachment: 165297 Committed
r129325
: <
http://trac.webkit.org/changeset/129325
>
Geoffrey Garen
Comment 5
2012-09-23 20:47:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug