PutScopedVar should not be marked as clobbering the world https://bugs.webkit.org/show_bug.cgi?id=97416

Reviewed by Filip Pizlo.

No performance change.

PutScopedVar doesn't have arbitrary side-effects, so it shouldn't be marked
as such.

* dfg/DFGNodeType.h:
(DFG):


Canonical link: https://commits.webkit.org/115362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129325 268f45cc-cd09-0410-ab3c-d52691b4dbfc